changed an image for the mobile version-footer

--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
 
 
   <div class ="container container-ads">
-      <div class="power-app">
-        <img src ="images/modelx_top_view.jpg"
-        alt ="power wall app" width="100%">
-      </div>
       <div class="software">
         <iframe id ="video"width="560" height="315" src="https://www.youtube.com/embed/ijcAwrWMi0g?controls=0&autoplay=1&mute=1" 
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
@@ -52,8 +48,8 @@
   <div class ="container contact">
     <div id ="c1">
       <form id ="form" action ="https://www.freecodecamp.com/email-submit)">
-        <label for ="email">Get in touch with us:</label>
-        <input id ="email" type ="email" name ="email" placeholder="enter your email here" required>
+        <label for ="email">Get in touch with us:</label><br>
+        <input id ="email" type ="email" name ="email" placeholder="enter your email here" required><br>
         <input id ="submit"type ="submit">
       </form>  
     </div>
