--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul>
               <li><a class="nav-link" href="#c1">MODEL3</a></li>
               <li><a class="nav-link" href="#c2">MODELX</a></li>
-              <li><a class="nav-link" href="#c3">POWER WALL</a></li>
-              <li><a class="nav-link" href="#c3">CHARGING</a></li>
+              <li><a class="nav-link" href="#power">POWER WALL</a></li>
+              <li><a class="nav-link" href="#power">CHARGING</a></li>
               <li><a class="nav-link" href="#c1">CYBERTRUCK</a></li>
             </ul>
         </nav>
@@ -31,11 +31,12 @@
   </div>
   <div class ="container container-ads">
       <div class="software">
-        <iframe id ="video"width="560" height="315" src="https://www.youtube.com/embed/ijcAwrWMi0g?controls=0&autoplay=1&mute=1" 
+        <iframe id ="video" width="100%" height="100%" 
+        src="https://www.youtube.com/embed/ijcAwrWMi0g?controls=0&autoplay=1&mute=1&modestbranding=1&autohide=1&showinfo=0" 
         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
       </div>
-      <div id ="c3" class="power-wall">
+      <div id ="power">
         <img src ="https://www.tesla.com/tesla_theme/assets/img/powerwall/section-powerwall-solution-march@2x.png?20171002"
         alt ="power wall" width="100%">
       </div>
