corrected mispelled word

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
   </div>
   <div class="model3">
-    <h1 class="animated">Mdel 3</h1>
+    <h1 class="animated">Model 3</h1>
     <p class="subtitle">CUSTOM ORDER</p>
   </div>
   <footer id="c2" class="container">
