changed the form action

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   <div class ="container contact">
     <div id ="c1">
-      <form id ="form" action ="https://www.freecodecamp.com/email-submit)">
+      <form id ="form" action ="https://www.tesla.com/en_ae">
         <label for ="email">Get in touch with us:</label><br>
         <input id ="email" type ="email" name ="email" placeholder="enter your email here" required><br>
         <input id ="submit"type ="submit">
